# silkscan

./: .gitignore  Cargo.toml  README.md  TUTORIAL.md  demo.ipynb  process_video.py  pyproject.toml  requirements.txt  silkscan_gui.py  view_pcd.py
prototype/: DepthCamera_2026-05-06-23-23-58.json  caching.py  demo.ipynb  make_demo.py  notebook_utils.py  requirements.txt  silkscan_proto.py
scans/tangle016/: distance_data.csv  manifest.json
silkscan/: __init__.py  caching.py  core_models.py  filters.py  legacy_editor_app.py  line_detection.py  o3d_editor_app.py  pcd_io.py  processing.py  quad_detection.py
silkscan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: lib.rs
