[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "silkscan"
version = "0.1.0"
description = "3D spider web reconstruction and processing toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "opencv-python",
    "open3d",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["silkscan*"]
